# streaming-data-loader

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  clean.sh  compose.yml  docker-compose.yml  k8s-deploy.sh  log-analyzer.py  main.py  prometheus.yml  pyproject.toml
configs/: prometheus.yml
k8s/: cadvisor.yml  elasticsearch.yml  grafana-dashboard-config.yml  grafana-dashboard-streaming-configmap.yml  grafana-datasources.yml  grafana.yml  kafka-ui.yml  kafka.yml  node-exporter.yml  prometheus-config.yml  prometheus.yml  streaming-data-loader-hpa.yml  streaming-data-loader.yml
src/: config.py  logger.py  metrics.py  utility.py
src/domain/: models.py
src/ports/input/: kafka_service.py
src/ports/output/: elastic_service.py
src/services/: event_service.py
tests/: test_config.py  test_elastic_service.py  test_event_model.py  test_integration_smoke.py  test_kafka_service.py  test_metrics.py  test_process_events.py
